--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,6 +11,19 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #3 - Use the same list display from search.html -->
+    <div th:if="${jobs} and ${jobs.size()}">
+        <!-- div th:if="${(jobList.size()}"-->
+        <h3 th:text="${jobs.size()} + ' Result(s)'"></h3>
+
+        <table class="job-listing" th:each="jobItem : ${jobs}">
+            <tr th:each="jobEntry : ${jobItem}">
+                <td th:text="${#strings.capitalizeWords(jobEntry.key)}"></td>
+                <!-- td th:text="${jobEntry.key}"></td -->
+                <!-- td th:text="${result.get(jobEntry)}"></td -->
+                <td th:text="${jobEntry.value}"></td>
+            </tr>
+        </table>
+    </div>
 
 </div>
 
